<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amenity GT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_world_mapactivity_button_text">Test Google Maps!</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="printers">Printers</string>
    <string name="vending">Vending</string>
    <string name="needToFind">Find me a </string>
    <string name="floorSelect">    Floor </string>
    <string name="showing">Showing:</string>
    <string name="title_activity_image_cache_view_test">ImageCacheViewTestActivity</string>
    <string name="imageCacheViewTestImage">Test image CUL_1.svg</string>
    <string name="rightArrow"> right </string>
    <string name="leftArrow"> left </string>
    <string name="cancel">Cancel</string>
    <string name="routeMe">Route Me</string>
    <string name="title_activity_routing_test">Routing Test</string>
    <string name="back">Back</string>
</resources>
